@@ -19,7 +19,7 @@ package Astro::DSS;
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: DSS.pm,v 1.5 2001/12/11 02:53:23 aa Exp $
+#     $Id: DSS.pm,v 1.6 2002/01/24 22:16:00 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 2001 University of Exeter. All Rights Reserved.
@@ -41,7 +41,7 @@ Astro::DSS - Object definining a query request in the Digital Sky Survey
                          Xsize     => $x_arcmin,
                          Ysize     => $y_arcmin,
                          Survey    => $dss_survey,
-                         ImageType => $type );
+                         Format => $type );
 
   my $file_name = $dss->querydb();
 
@@ -69,13 +69,13 @@ use Net::Domain qw(hostname hostdomain);
 use File::Spec;
 use Carp;
 
-'$Revision: 1.5 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.6 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 # C O N S T R U C T O R ----------------------------------------------------
 
 =head1 REVISION
 
-$Id: DSS.pm,v 1.5 2001/12/11 02:53:23 aa Exp $
+$Id: DSS.pm,v 1.6 2002/01/24 22:16:00 aa Exp $
 
 =head1 METHODS
 
@@ -620,6 +620,9 @@ sub _make_query {
             croak("Error: Cannont open output file $file_name");
          }   
 
+         # Needed for Windows (yuck!)
+         binmode FH;
+         
          # Write to output file
          my $length = length(${$reply}{"_content"});
          syswrite( FH, ${$reply}{"_content"}, $length );
