@@ -1,3 +1,9 @@
+2002-10-03  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * DSS.pm: One line change to make the module work correctly
+          on Windows where it needs to be told to write a binary
+          file explicitly.
+
 2001-12-11  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * DSS.pm: Modified directory handling, is ESTAR_DATA is not
